syntax = "proto3";
package protos;

service VGPURuntimeService {
  rpc GetDevice (GetDeviceRequest) returns (GetDeviceReply) {}
}

message GetDeviceRequest {
  string ctrUUID = 1;
}

message GetDeviceReply {
  map<string, string> envs = 1;
  string podUID = 3;
  string ctrName = 4;
  string podNamespace = 5;
  string podName = 6;
}
